# hufmark

./: .gitignore  Cargo.toml  Untitled Document 1
data/: enwik1a  enwik1b  enwik1c  lua5.1
design/: TinyVLI.md
src/: arcoder.rs  history.rs  main.rs  markov.rs  tuplemap.rs
