[package]
name = "hufmark"
version = "0.1.0"
authors = ["Quinten Kock <quintenkock@gmail.com>"]
edition = "2018"

[dependencies]
slice-deque = "0.2.4"
plain-map = "0.*"
fnv="1.0.*"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = true
overflow-checks = false
# Post-build: strip && upx